--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
     "jwt-decode": "^3.1.2",
+    "ng-block-ui": "^3.0.2",
+    "ngx-spinner": "^13.1.1",
     "rxjs": "~7.5.0",
     "sweetalert2": "^11.7.1",
     "tslib": "^2.3.0",
